--- a/app/src/main/res/layout/custom_list_item.xml
+++ b/app/src/main/res/layout/custom_list_item.xml
@@ -1,13 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="com.dom.viewapp.MainActivity">
+
 <TextView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/textView1"
+    android:id="@+id/list_item_date"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:padding="5dp"
+    android:gravity="left|center_horizontal"
+    android:padding="0dp"
     android:text="TextView"
-    android:background="#2ECC71"
-    android:textColor="#FFFFFF"
-    android:textSize="24sp">
+    android:textColor="#7D815B"
+    android:textSize="22sp"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentRight="true"
+    android:layout_alignParentEnd="true">
 </TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:padding="0dp"
+        android:id="@+id/list_item_name"
+        android:textSize="18dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_below="@+id/list_item_date"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+</RelativeLayout>
