--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,4 +11,10 @@
         android:orderInCategory="100"
         android:title="@string/settings"
         app:showAsAction = "never" />
+    <item
+        android:id="@+id/action_about"
+        android:orderInCategory="100"
+        android:title="@string/about"
+        app:showAsAction = "never" />
+
 </menu>
